<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.orange_money.enmusubi.activity.TextDetailActivity"
    android:background="@drawable/background50"
    android:orientation="vertical"
    android:id="@+id/detailLayout"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="8dp"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >
            <com.orange_money.enmusubi.layouts.EnmusubiTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="8dp"
                font:font="TanukiMagic.ttf"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="hogehogehoge"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                />
            <com.orange_money.enmusubi.layouts.EnmusubiTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="300円"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"
                font:font="TanukiMagic.ttf"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                >
                <com.orange_money.enmusubi.layouts.EnmusubiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_name"
                    android:layout_marginRight="4dp"
                    font:font="TanukiMagic.ttf"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hage"
                    />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    >
                    <com.orange_money.enmusubi.layouts.EnmusubiTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher_name"
                        android:layout_marginRight="4dp"
                        font:font="TanukiMagic.ttf"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="hugahuga"
                        />
                </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            >
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/enmusubi_icon"
                />
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <com.orange_money.enmusubi.layouts.EnmusubiTextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            font:font="TanukiMagic.ttf"
            android:text="@string/content"
            />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Hogeeeeeeeeeeeeeeeeeeeeee"
            />
        </LinearLayout>



</LinearLayout>
